home design done

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <meta name="description" content="Foododo - Best Ordering Platform">
   <meta name="author" content="Foododo.co">
-  <title>WhatToEat</title>
+  <title>Roomy</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Favicon -->
-  <link rel="icon" href="assets/img/logo/WTE logo.png" type="image/png">
+  <link rel="icon" href="assets/img/logo/R_Logo.png" type="image/png">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
   <link rel="manifest" href="manifest.webmanifest">
